reverse: Fix nominatim attrs parsing for broken boundingbox

This OpenStreeMap result has a bounding box that uses doubles to store
its borders, instead of strings, like all the others:

    {
        "place_id": "353472",
        "licence": "Data © OpenStreetMap contributors, ODbL 1.0. http://www.openstreetmap.org/copyright",
        "osm_type": "node",
        "osm_id": "151337566",
        "boundingbox": [
            38.4917175,
            38.5317175,
            -91.1940394,
            -91.1540394
        ],
        "lat": "38.5117175",
        "lon": "-91.1740394",
        "display_name": "Lyon, Franklin County, Missouri, United States of America",
        "place_rank": "19",
        "category": "place",
        "type": "hamlet",

We fix this by checking the type of the node, and turning it into a
string, as all the other items in the hash table.

See https://bugzilla.redhat.com/show_bug.cgi?id=1224563
and https://trac.openstreetmap.org/ticket/5132

https://bugzilla.gnome.org/show_bug.cgi?id=749963